# esp_idf_misc

./: README.md
components/http_server_authenticate/: CMakeLists.txt  README.md  component.mk
components/http_server_authenticate/example/: CMakeLists.txt  Makefile  README.md
components/http_server_authenticate/example/main/: Kconfig.projbuild  main.c
components/http_server_authenticate/src/: http_authentication_common.c
